--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
     "axios": "^0.16.2",
+    "backendless": "^4.0.9",
     "classnames": "^2.2.5",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
@@ -40,7 +41,9 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
