--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
+    "kouto-swiss": "^1.1.0",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^2.0.6",
